--- a/app/src/main/res/layout/item_poster.xml
+++ b/app/src/main/res/layout/item_poster.xml
@@ -21,89 +21,46 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="0dp">
+            android:layout_height="match_parent">
 
-            <!-- Main poster image - maintains 2:3 aspect ratio -->
-            <ImageView
-                android:id="@+id/poster"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/poster_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:scaleType="centerCrop"
-                android:background="@color/md_theme_surfaceDim"
-                android:contentDescription="Content Poster"
-                android:adjustViewBounds="true"
-                android:padding="0dp"
+                android:layout_height="match_parent">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/nav_button_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:background="@color/md_theme_surfaceContainer"> <ImageView
+                android:id="@+id/nav_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_exit_to_app"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/nav_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="H,2:3"
-                tools:src="@drawable/movie" />
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginBottom="8dp"
+                app:tint="@color/md_theme_primary"/>
 
-            <!-- Watch status indicators -->
-            <LinearLayout
-                android:id="@+id/statusContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="@dimen/spacing_xs"
-                android:background="@drawable/status_badge_background"
-                android:padding="@dimen/spacing_xs"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="@id/poster"
-                app:layout_constraintEnd_toEndOf="@id/poster">
+                <TextView
+                    android:id="@+id/nav_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Next Page"
+                    android:textAppearance="?attr/textAppearanceLabelMedium"
+                    android:textColor="?attr/colorPrimary"
+                    app:layout_constraintTop_toBottomOf="@+id/nav_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
-                <!-- Watched indicator -->
-                <ImageView
-                    android:id="@+id/iconWatched"
-                    android:layout_width="@dimen/icon_size_small"
-                    android:layout_height="@dimen/icon_size_small"
-                    android:src="@drawable/ic_check_circle"
-                    android:visibility="gone"
-                    app:tint="@color/success_green"
-                    android:contentDescription="Watched" />
-
-                <!-- In progress indicator -->
-                <ImageView
-                    android:id="@+id/iconInProgress"
-                    android:layout_width="@dimen/icon_size_small"
-                    android:layout_height="@dimen/icon_size_small"
-                    android:src="@drawable/ic_play_circle"
-                    android:layout_marginStart="@dimen/spacing_xs"
-                    android:visibility="gone"
-                    app:tint="@color/md_theme_primary"
-                    android:contentDescription="In Progress" />
-
-            </LinearLayout>
-
-            <!-- Progress indicator bar -->
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="0dp"
-                android:layout_height="3dp"
-                android:layout_marginHorizontal="@dimen/spacing_xs"
-                android:visibility="gone"
-                android:progressTint="@color/md_theme_primary"
-                android:progressBackgroundTint="@color/md_theme_outline"
-                app:layout_constraintBottom_toBottomOf="@id/poster"
-                app:layout_constraintStart_toStartOf="@id/poster"
-                app:layout_constraintEnd_toEndOf="@id/poster"
-                tools:progress="60"
-                tools:visibility="visible" />
-
-            <!-- Focus indicator overlay -->
-            <View
-                android:id="@+id/focusIndicator"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@drawable/focus_indicator_modern"
-                android:visibility="invisible"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
