--- a/app/src/main/res/layout/activity_details2.xml
+++ b/app/src/main/res/layout/activity_details2.xml
@@ -126,6 +126,17 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
+                    <ImageView
+                        android:id="@+id/imgLogo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="120dp"
+                        android:layout_marginBottom="8dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitStart"
+                        android:visibility="gone"
+                        tools:src="@drawable/movie"
+                        tools:visibility="visible" />
+
                     <TextView
                         android:id="@+id/tvTitle"
                         android:layout_width="wrap_content"
